--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,11 @@
             <artifactId>junit-vintage-engine</artifactId>
             <version>${junit.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.11.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
